[tool.poetry]
name = "cgroups2-exporter"
version = "2.0.0"
description = "prometheus exporter for cgroups v2"
authors = ["Dmitry Orlov <me@mosquito.su>", "Pavel Mosein <me@pavkazzz.ru>"]
readme = "README.md"
license = "Apache Software License"
homepage = "https://github.com/pavkazzz/cgroups2-exporter"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "cgroups2_exporter" },
]

[tool.poetry.urls]
"Source" = "https://github.com/mosquito/cgroups-exporter/"
"Tracker" = "https://github.com/mosquito/cgroups-exporter/issues"
"Say Thanks!" = "https://saythanks.io/to/mosquito"

[tool.poetry.dependencies]
python = "^3.8"
argclass = "^0.11.0"
aiochannel = "^1.2.1"
aiohttp = "3.8.5"
aiomisc = "^17.3"


[tool.poetry.scripts]
"cgroups2-exporter" = "cgroups2_exporter.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
